--- a/main.css
+++ b/main.css
@@ -48,7 +48,15 @@ hr {
     
 }
 
-#errors {
+.errors {
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: left;
+    align-items: center;
+    text-align: center;
+    height: 150px;
+    width: 150px;    
     color: var(--error-color);    
 }
 
